Github work-flow2

--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -1,5 +1,5 @@
 name: GitHub Actions CI/CD
-run-name: github is Deploying Local CI and Local CD. 🚀
+run-name: github is Deploying Local CI and Local CD.
 on:
   push:
     branches:
