--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -19,3 +19,6 @@ jobs:
       - name: Run docker compose
         run: |
           make docker_build
+      - name: stop application.
+        run: |
+          make app_down_docker
