--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -14,6 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Docker Login
+        uses: docker/login-action@master
         with:
           registry: ${{ secrets.DOCKER_REGISTRY }}
           username: ${{ secrets.DOCKER_USERNAME }}
