--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -11,10 +11,10 @@ jobs:
       - run: echo "The job was automatically triggered by a Push event."
      
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Docker Login
-        uses: docker/login-action@master
+        uses: docker/login-action@v1
         with:
           registry: ${{ secrets.DOCKER_REGISTRY }}
           username: ${{ secrets.DOCKER_USERNAME }}
