--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Run flask application.
         run: |
           make flaskapp_build
-      - name: Run docker compose
+      - name: Run docker compose.
         run: |
           make docker_build
+      - name: Push the Image in dockerHub.
+        run: |
+          make docker_push
