--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.9"
 services:
   flask_app:
     container_name: flask_app
-    image: studentapi/flask:1.0.0
+    image: studentapi:1.0.0
     build: .
     ports:
       - "4000:4000"
