Implementing a exceptional handling01.

--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -27,4 +27,4 @@ jobs:
           make docker_build
       - name: Push the Image in dockerHub.
         run: |
-          ${{ secrets.DOCKER_REGISTRY }} make docker_push
+          ${{ secrets.DOCKER_USERNAME }} make docker_push
