Implementing a exceptional handling03.

--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -27,4 +27,6 @@ jobs:
           make docker_build
       - name: Push the Image in dockerHub.
         run: |
-          ${{ secrets.DOCKER_USERNAME }} make docker_push
+          $REPO_NAME make docker_push
+        env:
+          REPO_NAME: aashirathore111
