--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -3,32 +3,10 @@ run-name: Deploying Local CI.
 on:
   push:
     branches:
-      - exercise-04
+      - exercise-05
 jobs:
   CI:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - run: echo "The job was automatically triggered by a Push event."
      
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Docker Login
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
-
-      - name: Building flask application.
-        run: |
-          make flaskapp_build
-
-      - name: Run docker compose.
-        run: |
-          make docker_build
-
-      - name: Push the Image into dockerHub.
-        run: |
-          make docker_push
-        env:
-          REPO_NAME: aashirathore111
