--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -21,3 +21,5 @@ jobs:
           VAGRANT_SSH_KEY: ${{ secrets.VAGRANT_SSH_KEY }}
         run: |
           echo "$VAGRANT_SSH_KEY" | tr -d '\r' > id_rsa
+          chmod 0400 id_rsa
+          ssh-add id_rsa
