--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -23,3 +23,5 @@ jobs:
           echo "$VAGRANT_SSH_KEY" | tr -d '\r' > id_rsa
           chmod 0400 id_rsa
           ssh-add id_rsa
+          ssh -i id_rsa -p 2222 vagrant@127.0.0.1
+          scp -i id_rsa -P 2222 ${{ github.workspace }}/docker-compose.yml vagrant@127.0.0.1:/home/vagrant
