implementing self-hosted-runner-07

--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -24,4 +24,4 @@ jobs:
           chmod 0400 id_rsa
           ssh-add id_rsa
           ssh -i id_rsa -p 2222 vagrant@127.0.0.1
-          scp -i id_rsa -P 2222 ${{ github.workspace }}/docker-compose.yml vagrant@127.0.0.1:/home/vagrant
+          scp -i id_rsa -P 2222 docker-compose.yml vagrant@127.0.0.1:/home/vagrant
