--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -23,4 +23,5 @@ jobs:
           echo "$VAGRANT_SSH_KEY" | tr -d '\r' > id_rsa
           chmod 0400 id_rsa
           ssh-add id_rsa
-          ls
+          scp -i id_rsa -P 2222 docker-compose-prod.yml vagrant@127.0.0.1:/home/vagrant
+          ssh -i id_rsa -p 2222 vagrant@127.0.0.1 "sudo docker compose up -d"
