implementing self-hosted-runner-11

--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -24,4 +24,4 @@ jobs:
           chmod 0400 id_rsa
           ssh-add id_rsa
           scp -i id_rsa -P 2222 docker-compose-prod.yml vagrant@127.0.0.1:/home/vagrant
-          ssh -i id_rsa -p 2222 vagrant@127.0.0.1 "sudo docker compose up -d"
+        # ssh -i id_rsa -p 2222 vagrant@127.0.0.1 "sudo docker compose up -d"
