--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.9"
 services:
   flask_app:
     container_name: flask_app
-    image: studentapi/flask:1.0.0
+    image: studentapi:1.0.0
     build: .
     ports:
       - "4000:4000"
@@ -15,7 +15,7 @@ services:
     container_name: flask_db
     image: postgres:12
     ports:
-      - "5432:5432"
+      - "5433:5432"
     environment:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
