--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -1,5 +1,5 @@
-name: GitHub Actions CI/CD
-run-name: Deploying Local CI.
+name: GitHub Actions.
+run-name: Deploying Local CD.
 on:
   push:
     branches:
@@ -9,14 +9,9 @@ jobs:
     runs-on: self-hosted
     steps:
       - run: echo "The job was automatically triggered by a Push event."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "This job's status is ${{ job.status }}."
-
       - name: Checkout code
         uses: actions/checkout@v3
-      - name: Set up SSH key and Trigger deployment
+      - name: Set up SSH key and Trigger deployment.
         env:
           VAGRANT_SSH_KEY: ${{ secrets.VAGRANT_SSH_KEY }}
         run: |
