--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -5,11 +5,22 @@ services:
     container_name: flask_app
     image: aashirathore111/studentapi:1.0.0
     ports:
-      - "4000:4000"
+      - "4000:8081"
     environment:
       - DB_URL=postgresql://postgres:postgres@flask_db:5432/postgres
     depends_on:
       - flask_db
+
+  flask_app2:
+    container_name: flask_app2
+    image: aashirathore111/studentapi:1.0.0
+    ports:
+      - "3000:8082"
+    environment:
+      - DB_URL=postgresql://postgres:postgres@flask_db:5432/postgres
+    depends_on:
+      - flask_db
+
   flask_db:
     container_name: flask_db
     image: postgres:12
@@ -21,6 +32,14 @@ services:
       - POSTGRES_DB=postgres
     volumes:
       - pgdata:/var/lib/postgresql/data
+
+  nginx:
+      image: nginx:latest
+      ports:
+        - "80:80"
+      depends_on:
+        - flask_app
+        - flask_app2
 
 volumes:
   pgdata: {}
