--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,17 @@
 version: "3.9"
 
 services:
+  db_migrate:
+    container_name: db_migration
+    image: studentapi:1.0.0
+    environment:
+      - MIGRATION=TRUE
+      - DB_URL=postgresql://postgres:postgres@flask_db:5432/postgres
+    depends_on:
+      - flask_db
   flask_app:
     container_name: flask_app
-    #image: studentapi:1.0.0
-    build: .
+    image: studentapi:1.0.0
     ports:
       - "4000:4000"
     volumes:
