remove repo name

--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           make flaskapp_build
 
-      - name: Run docker compose.
+      - name: Run docker build.
         run: |
           make start-db
 
