--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -31,4 +31,4 @@ jobs:
         run: |
           make docker_push
         env:
-          REPO_NAME: aashirathore111
+          USERNAME: ${{secrets.DOCKER_USERNAME}}
