--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -21,7 +21,9 @@ jobs:
 
       - name: Building flask application.
         run: |
-          make flaskapp_build
+          make docker-build
+        env:
+          IMAGE_TAG: ${{env.IMAGE_TAG}}
 
       - name: Run docker build.
         run: |
