Fix the image tag passing value in push stage

--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -34,3 +34,4 @@ jobs:
           make docker_push
         env:
           USERNAME: ${{secrets.DOCKER_USERNAME}}
+          IMAGE_TAG: ${{secrets.IMAGE_TAG}}
