--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -1,11 +1,11 @@
 name: GitHub Actions CI/CD
-run-name: Deploy Local CI.
+run-name: Local CI/CD.
 on:
   push:
     branches:
      - exercise-05
 jobs:
-  CD:
+  CI:
     runs-on: self-hosted
     steps:
       - run: echo "The job was automatically triggered by a Push event."
@@ -35,3 +35,17 @@ jobs:
         env:
           USERNAME: ${{secrets.DOCKER_USERNAME}}
           IMAGE_TAG: ${{secrets.IMAGE_TAG}}
+  CD:
+    runs-on: self-hosted
+    steps:
+      - name: Set up SSH key and Trigger deployment.
+        env:
+          VAGRANT_SSH_KEY: ${{ secrets.VAGRANT_SSH_KEY }}
+          IMAGE_TAG: ${{secrets.IMAGE_TAG}}
+        run: |
+          echo "$VAGRANT_SSH_KEY" | tr -d '\r' > id_rsa
+          chmod 0400 id_rsa
+          ssh-add id_rsa
+          scp -i id_rsa -P 2222 docker-compose-prod.yml vagrant@127.0.0.1:/home/vagrant
+          ssh -i id_rsa -p 2222 vagrant@127.0.0.1 "export IMAGE_TAG=$IMAGE_TAG"
+          # ssh -i id_rsa -p 2222 vagrant@127.0.0.1 "sudo docker compose -f docker-compose-prod.yml up -d"
