--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -5,36 +5,36 @@ on:
     branches:
      - exercise-05
 jobs:
-  CI:
-    runs-on: self-hosted
-    steps:
-      - run: echo "The job was automatically triggered by a Push event."
+  # CI:
+  #   runs-on: self-hosted
+  #   steps:
+  #     - run: echo "The job was automatically triggered by a Push event."
      
-      - name: Checkout code
-        uses: actions/checkout@v3
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3
 
-      - name: Docker Login
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+  #     - name: Docker Login
+  #       uses: docker/login-action@v1
+  #       with:
+  #         username: ${{ secrets.DOCKER_USERNAME }}
+  #         password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
 
-      - name: Building flask application.
-        run: |
-          make docker-build
-        env:
-          IMAGE_TAG: ${{secrets.IMAGE_TAG}}
+  #     - name: Building flask application.
+  #       run: |
+  #         make docker-build
+  #       env:
+  #         IMAGE_TAG: ${{secrets.IMAGE_TAG}}
 
-      - name: Run docker build.
-        run: |
-          make start-db
+  #     - name: Run docker build.
+  #       run: |
+  #         make start-db
 
-      - name: Push the Image into dockerHub.
-        run: |
-          make docker_push
-        env:
-          USERNAME: ${{secrets.DOCKER_USERNAME}}
-          IMAGE_TAG: ${{secrets.IMAGE_TAG}}
+  #     - name: Push the Image into dockerHub.
+  #       run: |
+  #         make docker_push
+  #       env:
+  #         USERNAME: ${{secrets.DOCKER_USERNAME}}
+  #         IMAGE_TAG: ${{secrets.IMAGE_TAG}}
   CD:
     runs-on: self-hosted
     steps:
@@ -47,5 +47,6 @@ jobs:
           chmod 0400 id_rsa
           ssh-add id_rsa
           scp -i id_rsa -P 2222 docker-compose-prod.yml vagrant@127.0.0.1:/home/vagrant
-          # ssh -i id_rsa -p 2222 vagrant@127.0.0.1 "export IMAGE_TAG=$IMAGE_TAG"
+          echo "scp run completed."
           ssh -i id_rsa -p 2222 vagrant@127.0.0.1 "envsubst <docker-compose-prod.yml | docker compose -f docker-compose-prod.yml up -d"
+          echo "Docker compose done"
