test the ssh command

--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -45,4 +45,4 @@ jobs:
         run: |
           echo "$VAGRANT_SSH_KEY" | tr -d '\r' > /tmp/id_rsa
           chmod 0400 /tmp/id_rsa
-          ssh -i /tmp/id_rsa -p 2222 vagrant@127.0.0.1
+          ssh -i /tmp/id_rsa -p 2222 vagrant@127.0.0.1 ls -l
