Get commit id to tag docker image.

--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -38,6 +38,12 @@ jobs:
   CD:
     runs-on: self-hosted
     steps:
+      - name: Get short SHA
+        run: echo "SHORT_SHA=$("${{ github.sha }}".SubString(0, 8))" >> $env:GITHUB_ENV
+
+      - name: Print short SHA
+        run: echo "Short SHA is ${{ env.SHORT_SHA }}"
+
       - name: Set up SSH key and Trigger deployment.
         env:
           VAGRANT_SSH_KEY: ${{ secrets.VAGRANT_SSH_KEY }}
