--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -5,36 +5,40 @@ on:
     branches:
      - exercise-05
 jobs:
-  # CI:
-  #   runs-on: self-hosted
-  #   steps:
-  #     - run: echo "The job was automatically triggered by a Push event."
+  CI:
+    runs-on: self-hosted
+    steps:
+      - run: echo "The job was automatically triggered by a Push event."
      
-  #     - name: Checkout code
-  #       uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-  #     - name: Docker Login
-  #       uses: docker/login-action@v1
-  #       with:
-  #         username: ${{ secrets.DOCKER_USERNAME }}
-  #         password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+      - name: Docker Login
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+      
+      - name: Get short SHA
+        run: echo "git_hash=$(git rev-parse --short "$GITHUB_SHA")" >>$GITHUB_HASH
+             echo "$GITHUB_HASH"
 
-  #     - name: Building flask application.
-  #       run: |
-  #         make docker-build
-  #       env:
-  #         IMAGE_TAG: ${{secrets.IMAGE_TAG}}
+      - name: Building flask application.
+        run: |
+          make docker-build
+        env:
+          IMAGE_TAG: $GITHUB_HASH
 
-  #     - name: Run docker build.
-  #       run: |
-  #         make start-db
+      - name: Run docker build.
+        run: |
+          make start-db
 
-  #     - name: Push the Image into dockerHub.
-  #       run: |
-  #         make docker_push
-  #       env:
-  #         USERNAME: ${{secrets.DOCKER_USERNAME}}
-  #         IMAGE_TAG: ${{secrets.IMAGE_TAG}}
+      - name: Push the Image into dockerHub.
+        run: |
+          make docker_push
+        env:
+          USERNAME: ${{secrets.DOCKER_USERNAME}}
+          IMAGE_TAG: $GITHUB_HASH
   CD:
     runs-on: self-hosted
     steps:
