--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -19,8 +19,12 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
       
-      - name: Get short SHA
-        run: echo "git_hash=$(git rev-parse --short "$GITHUB_SHA")" >>$GITHUB_HASH
+      - name: Get Hash
+        id: hash
+        run: echo "git_hash=$(git rev-parse --short "$GITHUB_SHA")" >> $GITHUB_HASH
+
+      - name: Check Hash
+        run: echo "${{ env.hash }}"
 
       - name: Building flask application.
         run: |
@@ -37,7 +41,7 @@ jobs:
           make docker_push
         env:
           USERNAME: ${{secrets.DOCKER_USERNAME}}
-          IMAGE_TAG: $GITHUB_HASH
+          IMAGE_TAG: ${{ env.hash }}
   CD:
     runs-on: self-hosted
     steps:
@@ -47,7 +51,7 @@ jobs:
       - name: Set up SSH key and Trigger deployment.
         env:
           VAGRANT_SSH_KEY: ${{ secrets.VAGRANT_SSH_KEY }}
-          IMAGE_TAG: ${{secrets.IMAGE_TAG}}
+          IMAGE_TAG: ${{ env.hash }}
         run: |
           rm /tmp/id_rsa
           echo "$VAGRANT_SSH_KEY" | tr -d '\r' > /tmp/id_rsa
