--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -21,7 +21,7 @@ jobs:
       
       - name: Get Hash
         id: get_commit_hash
-        run: echo "::set-output git_hash=$(git rev-parse --short "$GITHUB_SHA")"
+        run: echo "git_hash=$(git rev-parse --short "$GITHUB_SHA")" >> "$GITHUB_ENV"
 
       - name: Export commit id.
         run: |
@@ -32,7 +32,7 @@ jobs:
         run: |
           make docker-build
         env:
-          IMAGE_TAG: ${{ steps.get_commit_hash.outputs.hash }}
+          IMAGE_TAG: ${{ var.git_hash }}
 
       - name: Run docker build.
         run: |
