--- a/docker-compose-prod.yml.example
+++ b/docker-compose-prod.yml.example
@@ -3,7 +3,7 @@ version: "3.9"
 services:
   flask_app:
     container_name: flask_app
-    image: aashirathore111/studentapi:1.0.0
+    image: aashirathore111/studentapi:IMAGE_TAG
     ports:
       - "4000:8081"
     environment:
@@ -13,7 +13,7 @@ services:
 
   flask_app2:
     container_name: flask_app2
-    image: aashirathore111/studentapi:1.0.0
+    image: aashirathore111/studentapi:IMAGE_TAG
     ports:
       - "3000:8082"
     environment:
