--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -15,32 +15,32 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Docker Login
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+      # - name: Docker Login
+      #   uses: docker/login-action@v1
+      #   with:
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
       
-      - name: Get Hash
-        id: get_commit_hash
-        run: echo "git_hash=$(git rev-parse --short "$GITHUB_SHA")" >> $GITHUB_ENV
+      # - name: Get Hash
+      #   id: get_commit_hash
+      #   run: echo "git_hash=$(git rev-parse --short "$GITHUB_SHA")" >> $GITHUB_ENV
 
-      - name: Building flask application.
-        run: |
-          make docker-build
-        env:
-          IMAGE_TAG: ${{ env.git_hash }}
+      # - name: Building flask application.
+      #   run: |
+      #     make docker-build
+      #   env:
+      #     IMAGE_TAG: ${{ env.git_hash }}
 
-      - name: Run docker build.
-        run: |
-          make start-db
+      # - name: Run docker build.
+      #   run: |
+      #     make start-db
 
-      - name: Push the Image into dockerHub.
-        run: |
-          make docker_push
-        env:
-          USERNAME: ${{secrets.DOCKER_USERNAME}}
-          IMAGE_TAG: ${{ env.git_hash }}
+      # - name: Push the Image into dockerHub.
+      #   run: |
+      #     make docker_push
+      #   env:
+      #     USERNAME: ${{secrets.DOCKER_USERNAME}}
+      #     IMAGE_TAG: ${{ env.git_hash }}
   CD:
     name: CD-Job
     needs: CI
@@ -59,7 +59,7 @@ jobs:
             echo "Running kubernetes deployment with latest image."
             sed "s/IMAGE_TAG/${{env.git_hash}}/g" application.yaml > application.yaml
             echo "Apply kubernetes deployment."
-            kubectl apply -f application.yaml --namespace student-api
+            kubectl config get-contexts
   #         rm /tmp/id_rsa
   #         echo "$VAGRANT_SSH_KEY" | tr -d '\r' > /tmp/id_rsa
   #         chmod 0400 /tmp/id_rsa
