--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -58,4 +58,5 @@ jobs:
             echo "Running kubernetes deployment with latest image."
             sed "s/IMAGE_TAG/${{env.git_hash}}/g" application.yaml > application.yaml
             kubectl config get-contexts
+            kubectl delete -f application.yaml
             kubectl apply -f application.yaml
