--- a/helmcharts/values.yaml
+++ b/helmcharts/values.yaml
@@ -7,7 +7,7 @@ replicaCount: 1
 namespace:
   getns: student-api
 image:
-  repository: aashirathore111/studentapi:d852ef1
+  repository: aashirathore111/studentapi:IMAGE_TAG
   pullPolicy: IfNotPresent
   dbimage: postgres:12
   # Overrides the image tag whose default is the chart appVersion.
