--- a/helmcharts/templates/service.yaml
+++ b/helmcharts/templates/service.yaml
@@ -7,7 +7,7 @@ metadata:
     {{- include "mydb.labels" .}}
 spec:
   ports:
-  - port: 5432
+  - port: {{.Values.service.dbserviceport }}
     name: postgresdb
   clusterIP: None
   selector:
