--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -56,8 +56,5 @@ jobs:
           IMAGE_TAG: ${{ env.git_hash }}
         run: |
             echo "Running kubernetes deployment with latest image."
-            sed -i "s/tag:.*/tag:\ ${{ env.git_hash }}/g" helmcharts/values.yaml
             kubectl config get-contexts
-            sed -i "s/imagetag/${{ env.git_hash }}/g" argoCD-application.yaml
-            sed -i "s/TRUE/FALSE/g" argoCD-application.yaml
-
+            cd helmcharts && helm install templates .
