--- a/helmcharts/templates/configmap.yaml
+++ b/helmcharts/templates/configmap.yaml
@@ -7,4 +7,4 @@ metadata:
     app: postgres
 data:
   postgres_db: postgres
-  migration: {{ .Values.migration | default "TRUE" }}
+  migration: "TRUE"
