--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
      - '*'
+    # paths:
+    #  - '**.js'
 jobs:
   CI:
     name: CI-Job
@@ -41,22 +43,22 @@ jobs:
         env:
           USERNAME: ${{secrets.DOCKER_USERNAME}}
           IMAGE_TAG: ${{ env.git_hash }}
-  CD:
-    name: CD-Job
-    needs: CI
-    runs-on: self-hosted
+#   CD:
+#     name: CD-Job
+#     needs: CI
+#     runs-on: self-hosted
 
-    steps:
-      - name: Get Hash
-        id: get_commit_hash
-        run: echo "git_hash=$(git rev-parse --short "$GITHUB_SHA")" >> $GITHUB_ENV
+#     steps:
+#       - name: Get Hash
+#         id: get_commit_hash
+#         run: echo "git_hash=$(git rev-parse --short "$GITHUB_SHA")" >> $GITHUB_ENV
 
-      - name: Trigger deployment in Kubernetes.
-        env:
-          IMAGE_TAG: ${{ env.git_hash }}
-        run: |
-            echo "Running kubernetes deployment with latest image."
-            sed -i "s/tag:.*/tag:\ ${{ env.git_hash }}/g" helmcharts/values.yaml
-            kubectl config get-contexts
-            cd helmcharts && helm install templates .
+#       - name: Trigger deployment in Kubernetes.
+#         env:
+#           IMAGE_TAG: ${{ env.git_hash }}
+#         run: |
+#             echo "Running kubernetes deployment with latest image."
+#             sed -i "s/tag:.*/tag:\ ${{ env.git_hash }}/g" helmcharts/values.yaml
+#             kubectl config get-contexts
+# # cd helmcharts && helm install templates .
 
