--- a/helmcharts/values.yaml
+++ b/helmcharts/values.yaml
@@ -11,7 +11,7 @@ image:
   pullPolicy: IfNotPresent
   dbimage: postgres:12
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "5cabcb6"
 
 replicascount: 1
 imagePullSecrets: []
