updated values in helm

--- a/helmcharts/values.yaml
+++ b/helmcharts/values.yaml
@@ -11,7 +11,7 @@ image:
   pullPolicy: IfNotPresent
   dbimage: postgres:12
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "5cabcb6"
+  tag: 5306391
 
 replicascount: 1
 imagePullSecrets: []
