loki and db exporter values file.

--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -7,6 +7,9 @@ on:
     paths-ignore:
      - 'helmcharts/**'
      - '.github/**'
+     - 'blackbox-exporter-values.yaml'
+     - 'loki-values.yaml'
+     - 'pg-exporter-values.yaml'
 jobs:
   CI:
     name: CI-Job
