--- a/helmcharts/templates/deployment.yaml
+++ b/helmcharts/templates/deployment.yaml
@@ -26,6 +26,11 @@ spec:
                 secretKeyRef:
                   key: db_url
                   name: postgres-secret
+            - name: FLASK_RUN_HOST
+              valueFrom:
+                configMapKeyRef:
+                  key: flask_run_host
+                  name: app-configmap
       initContainers:
         - name: init-db-migration
           image: {{.Values.image.repository}}:{{.Values.image.tag}}
@@ -39,6 +44,11 @@ spec:
             valueFrom:
                 configMapKeyRef:
                   key: migration
+                  name: app-configmap
+          - name: FLASK_RUN_HOST
+              valueFrom:
+                configMapKeyRef:
+                  key: flask_run_host
                   name: app-configmap
       imagePullSecrets:
         - name: myregistrykey
