--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -5,7 +5,7 @@ on:
     branches:
      - '*'
     paths-ignore:
-     - 'helmcharts/**'
+    #  - 'helmcharts/**'
      - '.github/**'
      
 jobs:
