black-box exporter networking issue debuging.

--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -5,8 +5,8 @@ on:
     branches:
      - '*'
     paths-ignore:
-    #  - 'helmcharts/**'
-     - '.github/**'
+     - 'helmcharts/**'
+    #  - '.github/**'
      
 jobs:
   CI:
