--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: self-hosted
 
     steps:
-      - run: echo "The job was automatically triggered by a Push event"
+      - run: echo "The job was automatically triggered by a Push event."
      
       - name: Checkout code
         uses: actions/checkout@v3
