--- a/observability/prom-values.yaml
+++ b/observability/prom-values.yaml
@@ -3304,7 +3304,7 @@ prometheus:
     ## Defaults to 30s.
     ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/release-0.44/pkg/prometheus/promcfg.go#L180-L183
     ##
-    scrapeInterval: ""
+    scrapeInterval: "30s"
 
     ## Number of seconds to wait for target to respond before erroring
     ##
@@ -3312,7 +3312,7 @@ prometheus:
 
     ## Interval between consecutive evaluations.
     ##
-    evaluationInterval: ""
+    evaluationInterval: "30s"
 
     ## ListenLocal makes the Prometheus server listen on loopback, so that it does not bind against the Pod IP.
     ##
@@ -3705,6 +3705,7 @@ prometheus:
       
         - job_name: 'blackbox'
           metrics_path: /probe
+          scrapeInterval: 6s
           params:
              module: [http_2xx]  # Look for a HTTP 200 response.
           static_configs:
