--- a/.github/workflows/std-workflows.yml
+++ b/.github/workflows/std-workflows.yml
@@ -1,73 +1,35 @@
 name: GitHub Actions CI/CD
-run-name: CI/CD.
+run-name: Build and Push Image to E2E-CR.
 on:
   push:
     branches:
-     - '*'
-    paths-ignore:
-     - 'helmcharts/**'
-     - '.github/**'
-     
+      - e2e-infra-automation
+
 jobs:
-  CI:
-    name: CI-Job
-    runs-on: self-hosted
-
+  login:
+    runs-on: ubuntu-latest
     steps:
-      - run: echo "The job was automatically triggered by a Push event."
-     
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
-      - name: Docker Login
-        uses: docker/login-action@v1
+      - name: Login to Docker
+        uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
-      
+          registry: registry.e2enetworks.net
+          username: ${{ secrets.E2E_USERNAME }}
+          password: ${{ secrets.E2E_PASSWORD }}
+
       - name: Get Hash
         id: get_commit_hash
         run: echo "git_hash=$(git rev-parse --short "$GITHUB_SHA")" >> $GITHUB_ENV
-
-      - name: Building flask application.
-        run: |
-          make docker-build
-        env:
-          IMAGE_TAG: ${{ env.git_hash }}
-
-      - name: Run docker build.
-        run: |
-          make start-db
-
-      - name: Push the Image into dockerHub.
-        run: |
-          make docker_push
-        env:
-          USERNAME: ${{secrets.DOCKER_USERNAME}}
-          IMAGE_TAG: ${{ env.git_hash }}
-  CD:
-      name: argocd-application
-      needs: CI
-      runs-on: self-hosted
       
-      steps:
-        - name: Checkout code
-          uses: actions/checkout@v3
+      - name: Build and push docker image to E2E-CR.
+        env:
+          REGISTRY: registry.e2enetworks.net
+          REPOSITORY: poc-e2e-registry
+          IMAGE_TAG: ${{ env.git_hash }}
+        run: |
+          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
+          docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
-        - name: Get Hash
-          id: get_commit_hash
-          run: echo "git_hash=$(git rev-parse --short "$GITHUB_SHA")" >> $GITHUB_ENV
-
-        - name: Git checkout branch
-          run: |
-              git status
-              git checkout exercise-10
-
-        - name: Update value.yaml file.
-          run: sed -i "s/tag:.*/tag:\ ${{ env.git_hash }}/g" helmcharts/values.yaml
-        
-        - name: git commit and push values.yaml
-          run: |
-              git add helmcharts/values.yaml
-              git commit -m "updated values in helm"
-              git push --set-upstream origin exercise-10
+          
